--- a/test/wsclient.html
+++ b/test/wsclient.html
@@ -8,7 +8,7 @@
     <h1>Test Client</h1>
     <script>
       // This is the client application.
-      const url = 'ws://localhost:8080/ws'
+      const url = 'ws://localhost:8080/rt/ws'
       const webSocket = new WebSocket(url)
       webSocket.onmessage = function (event) {
         console.log(event.data)
